initial commit for okr
